--- a/React/tmdb_clone/package.json
+++ b/React/tmdb_clone/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.12",
+    "@mui/styles": "^5.14.12",
+    "@mui/x-date-pickers": "^6.16.1",
     "@popperjs/core": "^2.11.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,10 +15,12 @@
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-datepicker": "^4.20.0",
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "rsuite": "^5.40.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
